syntax = "proto3";
package tendermint.oracle;

option go_package = "github.com/cometbft/cometbft/proto/tendermint/oracle";

message Vote {
  string validator = 1;
  string oracle_id = 2;
  int64 timestamp = 3;
  string data = 4;
}

message GossipedVotes {
  bytes pub_key = 1;
  repeated Vote votes = 2;
  int64 signed_timestamp = 3;
  bytes signature = 4;
}

message CanonicalGossipedVotes {
  bytes pub_key = 1;
  repeated Vote votes = 2;
  int64 signed_timestamp = 3;
  string chain_id  = 4;
}
